Ajustes avatars, iconos final de proceso, requisitos

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -543,3 +543,8 @@ Skeletons
 .cursor-pointer {
     cursor: pointer;
 }
+
+.bg_card_none .section-expanded .content-background {
+    border: none;
+    background: none;
+}
