aldo: change form modal to create checklist

--- a/resources/sass/global_components.scss
+++ b/resources/sass/global_components.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
-$body-font-family: "Tahoma";
-$title-font: "Tahoma";
+$body-font-family: "Nunito";
+$title-font: "Nunito";
 $primary-default-color-opacity: #c0c1ed;
 $background-default-color: #f8f8fb;
 
